# escan

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reasonix.toml  requirements.txt
escan/: __init__.py  cli.py  config.py  logging_config.py
escan/agent/: converter.py  dedup.py  ocr.py  prompts.py  validator.py
escan/database/: __init__.py  connection.py  dao.py  models.py
escan/pipeline/: cache.py  checkpoint.py  fofa.py  hunter.py  icp.py  miit_icp.py  nuclei.py  orchestrator.py
escan/pipeline/icp_query/: config.yml  load_config.py  ymicp.py
escan/utils/: files.py  network.py  proxy.py  retry.py
escan/web/: app.py  launcher.py  log_handler.py  models.py  routes.py  sse.py
frontend/: index.html  package-lock.json  package.json  server.js
frontend/public/: index.html
frontend/public/css/: style.css
frontend/public/js/: api.js  app.js  config.js  dashboard.js  detail.js  icp_query.js  scan.js  templates.js  utils.js  vuln.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfirmDialog.tsx  FilterBar.tsx  Layout.module.css  Layout.tsx  LogViewer.tsx  Pagination.tsx  SeverityChart.tsx  StatsCard.module.css  StatsCard.tsx  TaskTable.tsx  Toast.tsx
frontend/src/hooks/: useSSE.ts  useSSELogs.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx  Proxy.tsx  Scan.tsx  TemplateDetail.tsx  Templates.tsx  Vulnerabilities.tsx
scripts/: docker-build.sh  docker-entrypoint.sh  enrich_icp_data.py  fix_existing_tags.py  init_db.py
tests/: test_converter.py  test_dedup.py  test_utils.py
(+3 files in other folders)
