[project]
name = "escan"
version = "2.0"
description = "漏洞扫描工具链 — FOFA + Nuclei + ICP + AI 模板生成"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "aiohttp>=3.13.5",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "ujson>=5.12.1",
    "cachetools>=7.1.4",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
progress = ["tqdm"]

[project.scripts]
escan = "escan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["escan", "escan.agent", "escan.pipeline", "escan.utils", "escan.database"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
